testdata/good/before/8.with-component.tw
<ul>
    @component("components/user", { name: "Anna", age: 27 })
</ul>