testdata/bad/duplicate-pass/index.tw
@component("user", { name: "Anna" })
    @pass("content")<p>Content 1</p>@end
    @pass("content")<p>Content 2</p>@end
@end
